whydivo page added

--- a/distribution.html
+++ b/distribution.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/fontawesome/css/all.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 
     <title>Divo</title>
@@ -65,7 +66,8 @@
                         </div>
                         <div class="inner_banner banner_text">
                             <div class="container-fluid">
-                                <h3>Distribution</h3>
+                                <h3 data-aos="fade-right"
+                                data-aos-duration="1000" data-aos-delay="300">Distribution</h3>
                             </div>
                             
                         </div>
@@ -80,12 +82,12 @@
                     <div class="row align-items-center justify-content-between">
                         <div class="col-md-6 col-sm-12">
                             <div class="dit_tx">
-                                <h3>Digital stores distribution to <br/>ALL music DSPs worldwide</h3>
+                                <h3 data-aos="fade-down"  data-aos-delay="300">Digital stores distribution to <br/>ALL music DSPs worldwide</h3>
                             </div>
                         </div>
                         <div class="col-md-6 col-sm-12">
                             <div class="dist_map">
-                                <img src="img/dspmap.png" alt="distmap" class="img-fluid">
+                                <img src="img/dspmap.png" alt="distmap" class="img-fluid"  data-aos="fade-down"  data-aos-delay="1200">
                             </div>
                         </div>
                     </div>
@@ -97,7 +99,7 @@
                 <div class="desction-2">
                     <div class="row justify-content-between align-items-center">
                         <div class="col-md-6">
-                            <div class="platforms row">
+                            <div class="platforms row"  data-aos="fade-right"  data-aos-delay="300">
                                 <div class="col-4 plicons">
                                     <div class="plicon_inr">
                                         <img src="img/youtube.png" alt="" class="img-fluid">
@@ -146,7 +148,7 @@
                             </div>
                         </div>
                         <div class="col-md-6">
-                            <div class="pf_text">
+                            <div class="pf_text"  data-aos="fade-right"  data-aos-delay="1000">
                                 <h3>Video platforms including<br/>
                                     YouTube, Facebook, Instagram, Tiktok, <br/>JioSaavn, Gaana, Apple Music, etc</h3>
                             </div>
@@ -215,6 +217,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
