Bugs fixes, Menu links, Preloader

--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
                     <div class="header_inner">
                         <div class="row align-items-center justify-content-between">
                             <div class="col-md-3 col-6 logo_col">
-                                <a href="#" class="logo_link">
+                                <a href="index.html" class="logo_link">
                                     <img src="img/logo.svg" alt="logo" class="logo img-fluid">
                                 </a>
                             </div>
@@ -38,19 +38,19 @@
                                     </div>
                                     <ul class="main_menu">
                                         <li>
-                                            <a href="#">Why Divo Music?</a>
+                                            <a href="why-divo.html">Why Divo Music?</a>
                                         </li>
                                         <li>
-                                            <a href="#">Distribution</a>
+                                            <a href="distribution.html">Distribution</a>
                                         </li>
                                         <li>
-                                            <a href="#">Publishing Royalties</a>
+                                            <a href="royalties.html">Publishing Royalties</a>
                                         </li>
                                         <li>
-                                            <a href="#">Partners</a>
+                                            <a href="partners.html">Partners</a>
                                         </li>
                                         <li>
-                                            <a href="#">Contact</a>
+                                            <a href="contact.html">Contact</a>
                                         </li>
                                     </ul>
                                 </nav>
@@ -192,19 +192,19 @@
                         <nav class="footer_nav">
                             <ul class="footer_menu">
                                 <li>
-                                    <a href="#">Why Divo Music?</a>
+                                    <a href="why-divo.html">Why Divo Music?</a>
                                 </li>
                                 <li>
-                                    <a href="#">Distribution</a>
+                                    <a href="distribution.html">Distribution</a>
                                 </li>
                                 <li>
-                                    <a href="#">Publishing Royalties</a>
+                                    <a href="royalties.html">Publishing Royalties</a>
                                 </li>
                                 <li>
-                                    <a href="#">Partners</a>
+                                    <a href="partners.html">Partners</a>
                                 </li>
                                 <li>
-                                    <a href="#">Contact</a>
+                                    <a href="contact.html">Contact</a>
                                 </li>
                             </ul>
                         </nav>
@@ -213,6 +213,18 @@
             </div>
         </div>
     </footer>
+
+    <div class="loader">
+        <div class="loder_animation">
+            <div class="loader_inner">
+                <div class="fill">
+                    <img src="img/logo.png" alt="" class="ldfill">
+                </div>
+                
+                <img src="img/footer-logo.png" alt="" class="ldgrey">
+            </div>
+        </div>
+    </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
