--- a/why-divo.html
+++ b/why-divo.html
@@ -22,7 +22,7 @@
                     <div class="header_inner">
                         <div class="row align-items-center justify-content-between">
                             <div class="col-md-3 col-6 logo_col">
-                                <a href="#" class="logo_link">
+                                <a href="index.html" class="logo_link">
                                     <img src="img/logo.svg" alt="logo" class="logo img-fluid">
                                 </a>
                             </div>
@@ -37,19 +37,19 @@
                                     </div>
                                     <ul class="main_menu">
                                         <li>
-                                            <a href="#">Why Divo Music?</a>
+                                            <a href="why-divo.html">Why Divo Music?</a>
                                         </li>
                                         <li>
-                                            <a href="#">Distribution</a>
+                                            <a href="distribution.html">Distribution</a>
                                         </li>
                                         <li>
-                                            <a href="#">Publishing Royalties</a>
+                                            <a href="royalties.html">Publishing Royalties</a>
                                         </li>
                                         <li>
-                                            <a href="#">Partners</a>
+                                            <a href="partners.html">Partners</a>
                                         </li>
                                         <li>
-                                            <a href="#">Contact</a>
+                                            <a href="contact.html">Contact</a>
                                         </li>
                                     </ul>
                                 </nav>
@@ -206,19 +206,19 @@ make us your trusted partner
                         <nav class="footer_nav">
                             <ul class="footer_menu">
                                 <li>
-                                    <a href="#">Why Divo Music?</a>
+                                    <a href="why-divo.html">Why Divo Music?</a>
                                 </li>
                                 <li>
-                                    <a href="#">Distribution</a>
+                                    <a href="distribution.html">Distribution</a>
                                 </li>
                                 <li>
-                                    <a href="#">Publishing Royalties</a>
+                                    <a href="royalties.html">Publishing Royalties</a>
                                 </li>
                                 <li>
-                                    <a href="#">Partners</a>
+                                    <a href="partners.html">Partners</a>
                                 </li>
                                 <li>
-                                    <a href="#">Contact</a>
+                                    <a href="contact.html">Contact</a>
                                 </li>
                             </ul>
                         </nav>
@@ -228,10 +228,23 @@ make us your trusted partner
         </div>
     </footer>
 
+    <div class="loader">
+        <div class="loder_animation">
+            <div class="loader_inner">
+                <div class="fill">
+                    <img src="img/logo.png" alt="" class="ldfill">
+                </div>
+                
+                <img src="img/footer-logo.png" alt="" class="ldgrey">
+            </div>
+        </div>
+    </div>
+
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.18/js/bootstrap-select.min.js" integrity="sha512-yDlE7vpGDP7o2eftkCiPZ+yuUyEcaBwoJoIhdXv71KZWugFqEphIS3PU60lEkFaz8RxaVsMpSvQxMBaKVwA5xg==" crossorigin="anonymous"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
