--- a/index.html
+++ b/index.html
@@ -79,6 +79,18 @@
         
     </div>
 
+    <div class="loader">
+        <div class="loder_animation">
+            <div class="loader_inner">
+                <div class="fill">
+                    <img src="img/logo.png" alt="" class="ldfill">
+                </div>
+                
+                <img src="img/footer-logo.png" alt="" class="ldgrey">
+            </div>
+        </div>
+    </div>
+
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="js/bootstrap.min.js"></script>
